Upgrade dependencies and switch to Java 11
Signed-off-by: Kai Kreuzer <kai@openhab.org>